# Gabylon

./: .gitignore  CMakeLists.txt  client.cpp  content_server.cpp  main.cpp  meta_server.cpp
gabylon/content_server/: content_message.cpp  content_message.h  content_message_method.h  gabylon_content_server.cpp  gabylon_content_server.h  write_info.cpp  write_info.h
gabylon/internal_client/: client_exception.cpp  client_exception.h  gabylon_meta_server_client.cpp  gabylon_meta_server_client.h
gabylon/lib/: message_body.cpp  message_body.h  server_base.cpp  server_base.h  socket_read_writer.cpp  socket_read_writer.h
gabylon/meta_server/: check_creating_message.cpp  check_creating_message.h  file_meta.cpp  file_meta.h  file_meta_message.cpp  file_meta_message.h  gabylon_meta_server.cpp  gabylon_meta_server.h  meta_message.cpp  meta_message.h
gabylon/server/: file_content.cpp  file_content.h  file_data.cpp  file_data.h  file_meta.cpp  file_meta.h  gabylon_server.cpp  gabylon_server.h
gabylon/server_exceptions/: invalid_body_exception.cpp  invalid_body_exception.h  invalid_method_exception.cpp  invalid_method_exception.h
gabylon/structs/: ContentServerInfo.cpp  content_server_info.h
input/: test_long.txt  test_short.txt
